# CalcWarrior

./: CMakeLists.txt  README.md  dosbox.conf  student_report.txt  students.json
code/: CMakeLists.txt  example.cpp  main.cpp  new.cpp  sin.cpp  ss.cpp
pycode/: count_method_demo.py  python_list_tutorial.py  shi.py  shi_improved.py  shi_optimized.py  thought_inspiration_1.py  thought_inspiration_2.py  thought_inspiration_3.py  thought_inspiration_4.py  thought_inspiration_5.py  thought_inspiration_6.py  thought_inspiration_7.py  thought_inspiration_8.py
弹窗小程序/: sleep.py  sleep.spec  sleep_reminder_full.py
新项目/: popup_final.py  列表教学.py
